--- a/gyl/static/css/style.css
+++ b/gyl/static/css/style.css
@@ -191,7 +191,7 @@ progress::-moz-progress-value {
     margin: 0 auto;
     margin-top:20px;
     margin-bottom: 10px;
-    background-image:url('../image/gyl.png');
+    //background-image:url('../image/gyl.png');
     background-size: 120%;
     background-position:center;
     border-radius:50%;
